<resources>

    <string name="app_name">Whispers</string>

    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_highlights_title">Highlights</string>
    <string name="bottom_nav_settings_title">Settings</string>

    <string name="general_error_connection">Please check your internet connection and try again!</string>
    <string name="general_error">Ops! Something went wrong, please try again!</string>
    <string name="general_dialog_title">Ops!</string>

    <string name="general_email_error">Please inform your e-mail!</string>
    <string name="general_email_invalid">Please inform a valid e-mail!</string>
    <string name="general_password_invalid">Please inform a valid password with at least 6 digits!</string>
    <string name="general_password_error">Please inform your password!</string>
    <string name="general_nickname_error">Please inform your nickname!</string>

    <string name="sign_in_fragment_button_title">Sign In</string>
    <string name="sign_in_fragment_password_hint">Password</string>
    <string name="sign_in_fragment_email_hint">E-mail</string>
    <string name="sign_in_fragment_title">Sign In</string>
    <string name="sign_in_fragment_sign_up_link">Don\'t have account? Sign Up</string>

    <string name="sign_up_fragment_button_title">Sign Up</string>
    <string name="sign_up_fragment_nickname_hint">Nickname</string>
    <string name="sign_up_fragment_password_hint">Password</string>
    <string name="sign_up_fragment_email_hint">E-mail</string>
    <string name="sign_up_fragment_title">Sign Up</string>

    <string name="home_empty_list_fragment">Ops! Nothing here, \nwhy don\'t you try put some new content?</string>
    <string name="home_author_name_fragment">By %s</string>

    <string name="post_comment_error_fragment">Please inform a content to your comment!</string>
    <string name="post_comment_hint_fragment">Type your comment here!</string>

    <string name="bottom_sheet_post_title">New post</string>
    <string name="bottom_sheet_post_body_hint">Type your whisper</string>
    <string name="bottom_sheet_post_color_title">Select one color</string>
    <string name="bottom_sheet_post_button_title">Post</string>
    <string name="bottom_sheet_post_error_message">Please inform a message to your post and select a color!</string>

    <string name="settings_fragment_logout_label">Logout</string>

</resources>
